# stashler

./: .gitignore  CLAUDE.md  EVAL_IMPROVEMENT_PLAN.md  PRICING_MODULE_PLAN.md  README.md  THIRD-PARTY-NOTICES.md  build.py  config.example.toml  identified-filter-notes.md  identified.filter  launcher.py  pyproject.toml  rules.toml  stasher.filter  stashler.spec
docs/screenshots/: README.md
stasher/: __init__.py  backfill.py  categories.py  cli.py  client.py  config.py  live.py  pipeline.py  ratelimit.py  runtime.py  store.py  tray.py
stasher/evaluate/: __init__.py  affix_norm.py  archetype_model.py  default.filter  default_archetype_set.yaml  default_rules.toml  engine.py  evaluator.py  itemdata.py  rules.py
stasher/evaluate/checks/: __init__.py  archetype_set.py  base.py  item_filter.py  regex_check.py  unique_roll.py
stasher/pricing/: __init__.py  aggregates.py  appraise.py  plan.py  price.py  pricer.py  pseudo.py  query.py  tradelink.py
stasher/pricing/data/: currency_rates.json  pseudo_rules.json
stasher/ui/: app.py  itemcard.py
stasher/ui/templates/: _chips.html  _detail_card.html  _item_card.html  _panel.html  _rules_popup.html  base.html  log.html  queue.html  record_detail.html  records.html  rules.html  settings.html
tests/: test_archetype_set.py  test_backfill_partition.py  test_checks.py  test_config.py  test_light_poll.py  test_pricing.py  test_pricing_ui.py  test_ratelimit.py  test_store.py  test_validate_eval.py
tools/: harvest_ee2_pricing.py  validate_eval.py
